--- a/MedicalReport/.settings/org.eclipse.wst.common.component
+++ b/MedicalReport/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="MedicalReport">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/WebContent/WEB-INF/lib"/>
         <property name="context-root" value="MedicalReport"/>
         <property name="java-output-path" value="/MedicalReport/build/classes"/>
     </wb-module>
